--- a/Templates/index.html
+++ b/Templates/index.html
@@ -230,14 +230,14 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Navya RS</h3>
+                  <h3>Pavithra</h3>
                   <h4>Intern at MeviTechnologies</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                   Great place to learn and Work
+                    Mevi technologies is a very good company wherein websites are developed, internships are provided to students, They also train students on various concepts like machine learning,web technologies etc by conducting student development programs.I attended their 4 day sdp session on web technologies and it was very helpful and educational where I could learn many things as a beginner
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -248,14 +248,15 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                  <h3>Deeksha </h3>
-                  <h4>student - East West college of engineering</h4>
+                  <h3>R SWASTHIK </h3>
+                  <h4>student - Reva University</h4>
                   <div class="stars">
                     <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                   Able to understand Everything in depth
+                    It's one of the best experience I've had  and i have learnt Full stack development.thank so much for being the best trainers and I've gained knowledge towards full stack development. From Android developer to full stack developer ur guidance made me learn stuff easily 😊.
+                    Hoping will have more training session more 
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -335,7 +336,7 @@
           <div class="col-md-3 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="#">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="services.html">Services</a></li>
              
