--- a/Templates/about.html
+++ b/Templates/about.html
@@ -406,7 +406,7 @@
                 </div>
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  I started working with mevi technology from past 3 months...the working environment is amazing and friendly.i learn lot gain knowledge.
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
@@ -502,7 +502,7 @@
           <div class="col-md-3 col-md-3 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><a href="#">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About us</a></li>
               <li><a href="services.html">Services</a></li>
              
