--- a/Templates/index.html
+++ b/Templates/index.html
@@ -218,8 +218,8 @@
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    You will given opportunity to lead as the culture is quite cooperative.
-                     Open door policy, flexible work timings and exposure to HR tech domain
+                    You will be given opportunity to lead, as the culture is quite cooperative.
+                     Open door policy, flexible work timings 
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
